# Basic-KG-Prototypes

./: .gitignore  README.md  main.py  pyproject.toml  run.py
data/: edges.csv  nodes.csv
utils/: data_loader.py  gremlin_loader.py  neo4j_loader.py
web/: graph-data.js  kg-tutorial-prototype-2.html
