[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basic-kg-prototypes"
version = "0.1.0"
description = "A Flask-based backend prototype demonstrating Neo4j (Cypher) vs Gremlin (TinkerPop) Knowledge Graph paradigms."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Developer" }
]
dependencies = [
    "flask>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort"
]
